# Minosgame

./: CMakeCache.txt  CMakeLists.txt  Makefile  SDL2_Project  cmake_install.cmake  game.c  game.h  game_score.c  game_score.h  main.c  menu.c  menu.h  minosgame  player_setup.c  player_setup.h  scores.txt
dominos/: dominos_events.c  dominos_events.h  dominos_game.c  dominos_game.h  dominos_renderer.c  dominos_renderer.h  dominos_types.h
triominos/: triomino_events.c  triomino_events.h  triomino_game.c  triomino_game.h  triomino_renderer.c  triomino_renderer.h  triomino_types.c  triomino_types.h
